--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Agostina Loza">
     <meta name="keywords" content="practiva, trabajo, javascript">
+    <link rel="stylesheet" href="css/style.css">
     <title>trabajo practico 2</title>
 </head>
 <body>
-    
+
 </body>
-<script src="js/ejercicio1.js"></script>
+<script src="js/ejercicio12.js"></script>
 </html>
